--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,9 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#546e7a</color>
-    <color name="colorPrimaryDark">#29434e</color>
-    <color name="colorAccent">#F44336</color>
 
+    <color name="colorAccent">#ebebeb</color>
+
+    <color name="colorPrimary">#b9b9b9</color>
+    <color name="colorPrimarylight">#474747</color>
+    <color name="colorPrimaryDark">#202020</color>
+    <color name="primaryColor">#ebebeb</color>
+
+    <color name="primaryTextColor">#000000</color>
     <color name="whiteTransparentHalf">#80ffffff</color>
 
     <color name="likeBtnGray">#747474</color>
