--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -89,15 +89,9 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_btn">
 
-        <com.facebook.login.widget.LoginButton
-            android:id="@+id/connectWithFbButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:layout_gravity="center_horizontal"
-            android:text="  connect_with_facebook" />
 
-        <Button
+
+        <com.google.android.gms.common.SignInButton
            android:id="@+id/gmailBtnLogin"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
